--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,5 @@
 {
   "rewrites": [
-    { "source": "/", "destination": "/proposal-spots-current (1).html" }
+    { "source": "/((?!api/).*)", "destination": "/proposal-spots-current.html" }
   ]
 }
